@@ -64,6 +64,7 @@
             --add-opens juery.api/fr.ght1pc9kc.juery.api.filter=ALL-UNNAMED
             --add-opens juery.basic/fr.ght1pc9kc.juery.basic=ALL-UNNAMED
             --add-opens juery.basic/fr.ght1pc9kc.juery.basic.filter=ALL-UNNAMED
+            --add-opens juery.basic/fr.ght1pc9kc.juery.basic.utils=ALL-UNNAMED
             --add-opens juery.jooq/fr.ght1pc9kc.juery.jooq.pagination=ALL-UNNAMED
             --add-opens juery.jooq/fr.ght1pc9kc.juery.jooq.filter=ALL-UNNAMED
         </surefire.argline.opens>
@@ -346,7 +347,6 @@
                         </executions>
                         <configuration>
                             <useAgent>true</useAgent>
-<!--                            <passphrase>${env.GPG_PASSPHRASE}</passphrase>-->
                             <gpgArguments>
                                 <arg>--pinentry-mode</arg>
                                 <arg>loopback</arg>
